Fri Sep 16 07:02:26 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_3163_Regression/run_test.pl:
        * tests/Bug_3630_Regression/run_test.pl:
        * tests/Bug_3683_Regression/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.
        
        * tests/Bug_3630_Regression/server.cpp:
          Added \n

Thu Sep 15 07:42:01 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/AMI/run_test.pl:
        * tests/Bug_2183_Regression/run_test.pl:
        * tests/Bug_2186_Regression/run_test.pl:
        * tests/Bug_2935_Regression/run_test.pl:
        * tests/Bug_3068_Regression/run_test.pl:
        * tests/Leader_Followers/run_test.pl:
        * tests/Oneway_Send_Timeouts/run_test.pl:
          Copy only those configuration files that are needed by the targets.
          We don't want to solve this in the test framework; the script knows
          which configuration files should be copied.

Wed Sep 14 07:34:56 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TAO_Internal.cpp:
          When we can't find the service config file output a message that
          has error in it, so that the scoreboard parser also detects those
          errors

Wed Sep  7 18:07:24 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CodecFactory/CodecFactory.h:
        * tao/CodecFactory/CodecFactory.cpp:
        * tao/CodecFactory/CodecFactory.mpc:
          export file is now generated by tao_idl

        * tao/CodecFactory/codecfactory_export.h:
          Removed this file.

Wed Sep  7 17:31:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirGIOP.h:
        * tao/BiDir_GIOP/BiDirGIOP.cpp:
        * tao/BiDir_GIOP/BiDirPolicy_Validator.h:
        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
          export file is now generated by tao_idl
